# csds426-clock-project

./: .clangd  .gitignore  Cargo.toml  FINDINGS.md  Makefile  README.md  compile_commands.json  flake.nix  http_better_than_icmp.csv  justfile  notes.md  out.csv  report.typ  scan.sh  sources.bib  test.csv
analysis/: accuracy_comparison.py  clock_by_country.py  clock_skew_pct.py  fake_time_server.py  geo_plot.py  http_better_than_icmp.py  icmp_overlap.py  icmp_vs_http.py  nonstandard_timestamp_pct.py  offset_boxplot.py  outliers_by_country.py  plot_offset_accuracy.py  pretty_probes.py  pyproject.toml  rollover_cluster_pct.py  run_golden.py  search_convergence.py  timestamp_only_examples.py  tranco_rank_vs_offset.py  tune_params.py
http-syncing/: Cargo.toml  input.csv  testrun.csv
http-syncing/src/: lib.rs  main.rs
icmp_clocksync/: Cargo.toml  build.nix
icmp_clocksync/module/: module_icmp_timestamp.c  module_icmp_timestamp.h
icmp_clocksync/scripts/: scan-icmp-ping.sh  scan-icmp-time.sh  shared.sh
icmp_clocksync/src/: lib.rs  shared.rs
report/: report.typ  sources.bib
report/figures/: icmp_clockdiff.mmd
scripts/: render_figures.sh  run_analysis.sh  scan-http.sh  scan-icmp-time.sh  scan_tranco.sh  shared.sh  split_csv.py
slides/: data-report.qmd  mid-report.html  mid-report.qmd
src/: main.rs
zmap/: module_icmp_timestamp.c  module_icmp_timestamp.h
zmap-scanning/: Makefile
zmap-scanning/scripts/: scan-http.sh  scan-icmp-time.sh
