[package]
name = "clocks"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
csv = "1.4.0"
httpdate = "1.0.3"
http = "1"
tiny_http = "0.12"
ureq = "3.1.4"
spin_sleep = "1.3.3"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
rand = "0.10.0"
rayon = "1.11.0"
itertools = "0.14"
anyhow = "1"
log = "0.4.29"
env_logger = "0.11.10"
